Added Local Storage, add to shopping cart and remove from shoppingCart

--- a/src/gridLayout/Homepage/HomepageGrid.html
+++ b/src/gridLayout/Homepage/HomepageGrid.html
@@ -85,343 +85,17 @@
         <div class="under-carrousel-container">
           <div class="under-carrousel-section">
             <div class="under-carrousel-title">Best Books of the Month</div>
-            <div class="under-carrousel-cards-container">
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-            </div>
+            <div
+              class="under-carrousel-cards-container"
+              id="book-container"
+            ></div>
           </div>
           <div class="under-carrousel-section">
             <div class="under-carrousel-title">Recently Added</div>
-            <div class="under-carrousel-cards-container">
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-              <div class="divider2"></div>
-
-              <div class="under-carrousel-card">
-                <div class="under-carrousel-card-info">
-                  <img
-                    src="../../images/the-idiot.jpg"
-                    alt=""
-                    class="under-carrousel-img"
-                  />
-                  <div class="under-carrousel-card-description-container">
-                    <div class="under-carrousel-card-description">
-                      <div class="under-carrousel-card-title">
-                        Hero with Gold
-                      </div>
-                      <div class="under-carrousel-card-author">
-                        Dougie Rogers
-                      </div>
-                    </div>
-                    <div class="under-carrousel-card-price">$90</div>
-                  </div>
-                </div>
-                <button class="under-carrousel-card-button">
-                  <i
-                    class="fa-solid fa-shopping-cart under-carrousel-button-icon"
-                  ></i>
-                  <div class="under-carrousel-button-text">Add to cart</div>
-                </button>
-              </div>
-            </div>
+            <div
+              class="under-carrousel-cards-container"
+              id="book-container-recent"
+            ></div>
           </div>
         </div>
       </div>
@@ -436,5 +110,8 @@
         <div class="footer-icon"></div>
       </div>
     </footer>
+
+    <!-- <script src="../ShoppingCart/ShoppingCartGrid.js"></script> -->
+    <script src="/src/script.js"></script>
   </body>
 </html>
