--- a/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
+++ b/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
@@ -29,7 +29,7 @@
       </ul>
       <ul class="navbar-links">
         <li>
-          <a href="index.html">
+          <a href="../Homepage/HomepageGrid.html">
             <i class="fa-solid fa-house"></i>
             <span>Home</span>
           </a>
@@ -55,7 +55,7 @@
       </ul>
 
       <div class="mobile-sidebar">
-        <a href="index.html">Home</a>
+        <a href="../Homepage/HomepageGrid.html">Home</a>
         <a href="ShoppingCartGrid.html">Shopping Cart</a>
         <a href="../Orders/OrderList/OrderListGrid.html">Orders</a>
         <a href="../Login/LoginGrid.html">Login</a>
@@ -64,47 +64,8 @@
 
     <section class="order-section-container">
       <div class="shopping-section-title">Your products</div>
-      <div class="orders-container">
-        <div class="shopping-wrapper">
-          <img src="../../images/the-idiot.jpg" alt="" class="shopping-img" />
-          <div class="order-details">
-            <div class="order-item-id">Hero with Gold</div>
-            <div class="order-items">
-              <span class="order-label">by </span>
-              <span class="order-count">Dougie Rogers</span>
-            </div>
-          </div>
-          <div class="order-checkout">
-            <div class="order-price">$90</div>
-            <div class="order-edit">
-              <i class="fa-solid fa-trash-can order-edit-icon"></i>
-              <span class="order-edit-label">Remove</span>
-            </div>
-          </div>
-        </div>
-        <div class="divider"></div>
-
-        <div class="shopping-wrapper">
-          <img src="../../images/the-idiot.jpg" alt="" class="shopping-img" />
-          <div class="order-details">
-            <div class="order-item-id">Hero with Gold</div>
-            <div class="order-items">
-              <span class="order-label">by </span>
-              <span class="order-count">Dougie Rogers</span>
-            </div>
-          </div>
-          <div class="order-checkout">
-            <div class="order-price">$90</div>
-            <div class="order-edit">
-              <i class="fa-solid fa-trash-can order-edit-icon"></i>
-              <span class="order-edit-label">Remove</span>
-            </div>
-          </div>
-        </div>
-        <div class="divider"></div>
-      </div>
+      <div class="orders-container" id="shopping-section"></div>
     </section>
-
     <div class="shopping-cart-total-container">
       <div class="shopping-cart-total">
         <div class="shopping-cart-total-label">Total:</div>
@@ -131,5 +92,7 @@
         <div class="footer-icon">s</div>
       </div>
     </footer>
+
+    <script src="/src/script.js"></script>
   </body>
 </html>
