--- a/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
+++ b/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
@@ -69,7 +69,7 @@
     <div class="shopping-cart-total-container">
       <div class="shopping-cart-total">
         <div class="shopping-cart-total-label">Total:</div>
-        <div class="shopping-cart-total-price order-price">$90</div>
+        <div class="shopping-cart-total-price order-price">$</div>
       </div>
       <div class="shopping-cart-buttons">
         <a href="../HomePage/HomePageGrid.html ">
