Added Order Storage and Change Status of Order

--- a/src/gridLayout/Orders/OrderList/OrderDetailsGrid.html
+++ b/src/gridLayout/Orders/OrderList/OrderDetailsGrid.html
@@ -161,8 +161,11 @@
             <a href="../HomePage/HomePageGrid.html ">
               <button class="cancel-order-btn">Continue Shopping</button>
             </a>
-            <a href="../OrderDetails/OrderDetailsModalGrid.html">
-              <button class="update-order-btn">Place Order</button>
+            <!-- <a href="../OrderDetails/OrderDetailsModalGrid.html"> -->
+            <a>
+              <button class="update-order-btn" id="place-order-btn">
+                Place Order
+              </button>
             </a>
           </div>
         </div>
@@ -178,5 +181,7 @@
         <div class="footer-icon"></div>
       </div>
     </footer>
+
+    <script src="/src/script.js"></script>
   </body>
 </html>
